# pynjsla

./: .gitignore  README.md  njsla_split.py  pyproject.toml  test_import.py  test_njsla.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  troubleshooting-q-a.md
.github/workflows/: publish.yml  tests.yml
src/: __init__.py
src/pynjsla/: __init__.py  njsla.py  njsla_batch.py
tests/: test_import.py  test_njsla.py  test_njsla_batch.py
