[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pynjsla"
version = "0.1.0"
description = "Splits Individualized Score Reports (ISR) from the New Jersey Student Learning Assessment (NJSLA) PDF export into two page PDFs and labels output by the New Jersey State ID (SID) extracted from the ISR."
readme = "README.md"
requires-python = ">=3.10"

license = "MIT"

authors = [
  { name = "Tyrone O'Garro Jr", email = "t.ogarro94@gmail.com" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

dependencies = [
  "pandas>=2.0",
  "pdfplumber>=0.11.9",
  "pypdf>=3.9.1",
  "numpy>=1.24"
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
  "pytest-cov",
  "pandas>=2.0",
  "pdfplumber>=0.11.9",
  "pypdf>=3.9.1",
  "numpy>=1.24"
]

[project.urls]
Homepage = "https://github.com/Scipio94/pynjsla"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
